2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* gtk/SelectionData.custom : guard against null in get_Text.
	[Fixes #52713]

2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* glue/selectiondata.c : expose data field.
	* gtk/SelectionData.custom : add Data property.
	[Fixes #53397]

2004-01-27  John Luke  <jluke@cfl.rr.com>

	* gtk/AccelKey.custom: add convenience ctor
	* gtk/Gtk.metadata: revert previous Widget.AddAccelerator change,
	fix AccelKey fields
	* gtk/Widget.custom: add overload for AddAccelerator
	* gtk/gtk-api.xml: regen
	
2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* glib/Value.cs : only g_free values we allocate.
	[Fixes #51180]

2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* glib/TypeConverter.cs : lookup GTypes for boxed value types.
	* glib/Value.cs : fix boxed type handling in object ctor.
	[Fixes #51043]

2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* generator/BoxedGen.cs : gen a Value to Boxed explicit cast op.
	* generator/Property.cs : use new cast in Boxed getters.
	[Fixes #53414]

2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.Metadata : revert opaquing of TextIter.
	* gtk/TextBuffer.custom : ditto
	* gtk/gtk-api.xml : regen

2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* generator/MethodBody.cs : remove unnecessary generation for
	Handle using out parameters.
	* gtk/Gtk.Metadata : make TextIter opaque
	* gtk/TextBuffer.custom : remove redundant dllimport
	* gtk/gtk-api.xml : regen

2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* gnome/Gnome.metadata : Icon.LookupSync mark factory param
	null_ok.  Reworked from patch by Todd Berman.
	* gnome/gnome-api.xml : regen

2004-01-25  Mike Kestner  <mkestner@ximian.com>

	* art/art-api.xml : regen
	* gdk/gdk-api.xml : regen
	* generator/SymbolTable.cs : add unsigned char mapping
	* gnome/gnome-api.xml : regen
	* parser/gapi2xml.pl : handle unsigned keyword in fields,
	typedefs, and parameter types.
	[Fixes #53055]
