@@ -1,3 +1,12 @@
+2004-01-28  Mike Kestner  <mkestner@ximian.com>
+
+	* gtk/gtk-api.xml : regen
+	* parser/gapi2xml.pl : fix signals parsing where a STRUCT_OFFSET
+	is not present in the signal_new call.
+	* parser/gapi_pp.pl : ignore #ident lines.
+	* vte/vte-api.xml : regen
+	[Fixes #53189]
+
 2004-01-27  Mike Kestner  <mkestner@ximian.com>
 
 	* gtk/SelectionData.custom : guard against null in get_Text.
